[package]
name = "rs2know"
version = "0.1.1"
edition = "2021"
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "rs2know is a command-line tool that analyzes Rust code and provides detailed analysis results using OpenAI's GPT-4."
repository = "https://github.com/JeromeLeong/rs2know"
readme = "README.md"
license = "MIT"
keywords = ["rust", "analysis", "OpenAI", "GPT-4"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
walkdir = "2.5.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
git2 = "0.20.0"
