[package]
name = "rs2know"
version = "0.1.0"
edition = "2021"
authors = ["Jerome <jerome.developer@gmail.com>"]
description = "A Rust code analysis tool with AI capabilities"
repository = "https://github.com/JeromeLeong/rs2know"
readme = "README.md"
license = "MIT"
keywords = ["rust", "analysis", "OpenAI", "GPT-4"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
walkdir = "2.5.0"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
git2 = "0.20.0"
serde_yaml = "0.9.33"
dirs = "6.0.0"
dialoguer = "0.11.0"
